--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *,
 *::after,
 *::before {
-  box-sizing: inherit;
+box-sizing: inherit;
 }
 
 
@@ -12,7 +12,6 @@
   url("../fonts/gilroy-extrabold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
@@ -22,29 +21,20 @@
   format("woff");
   font-weight: normal;
   font-style: normal;
-
 }
 
 html {
-  box-sizing: border-box;
+box-sizing: border-box;
 } 
 
 body {
   margin: 0;
   padding: 0;
-      
   font-family: "Open sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #000000;
-
- /*background-color: #fff;
- background-image: url("../img/device-index.jpg");
-    background-repeat: no-repeat;
-    background-size: 1440px 2795px;
-    background-position: top center;*/
 }
-
 
 .logo {
   font-family: "gilroyextrabold", Arial, sans-serif;
@@ -60,7 +50,7 @@ a {
 }
 
 .header-main {
-  /* background-color: #f7e296;*/
+  background-color: #f7e296;
 }
 
 .header-menu-small,
@@ -72,9 +62,27 @@ a {
   font-weight: 300;
   letter-spacing: 0.1;
   padding: 0;
-    margin: 0;
-   
+  margin: 0;
+
   list-style: none;
+}
+
+.user-name {
+  padding-left: 25px;
+  position: relative;
+}
+
+.user-name::before {
+  content: "";
+  left: 0px;
+  top: 10px;
+  position: absolute;
+  width: 13px;
+  height: 12px;
+
+  background-image: url("../img/user.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 .header-menu-small a,
@@ -102,7 +110,6 @@ a {
   letter-spacing: 0.15px;
 }
 
-
 .catalog-link ,
 .option-menu a {
   font-family: "gilroyextrabold", Arial, sans-serif;
@@ -122,7 +129,7 @@ a {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 56px;
-    
+  
   letter-spacing: 0.17px;
 }
 
@@ -132,6 +139,11 @@ a {
   line-height: 30px;
   color: #464646;
   line-height: 30px;
+    
+  margin: 0;
+  padding: 0;
+  padding-top: 17px;
+    padding-bottom: 52px;
 }
 
 .product-more {
@@ -139,8 +151,15 @@ a {
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 2.15px;
+    
+  margin: 0;
+  padding: 0;
+  padding-bottom: 50px;
 }
-
+.product-item-description {
+    margin-top: 53px;
+    margin-left: -3px;
+}
 .product-item-description tr:first-child {
   font-family: "gilroylight", Arial, sans-serif;
   font-size: 36px;
@@ -153,7 +172,7 @@ a {
   font-size: 13px;
   line-height: 20px;
   color: #464646;
-    
+  
   letter-spacing: 0.13px;
 }
 
@@ -163,12 +182,13 @@ a {
   line-height: 24px;
   letter-spacing: 0.18;  
   list-style: none;
-
 }
 
 .catalog-popular {
-    width: 160px;
-    height: 245px;
+  width: 160px;
+  height: 245px;
+    
+  background-position: center;
 }
 .catalog-popular:first-child {
   background-image: url(../img/popular-1.svg);
@@ -204,6 +224,9 @@ a {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 47px;
   line-height: 48px;
+  padding: 0;
+  margin: 0;
+  padding-bottom: 32px;
 }
 
 .services-about p {
@@ -212,31 +235,37 @@ a {
   line-height: 30px;
   color: #464646;
     
+  padding: 0;
+  margin: 0;
+  
   letter-spacing: 0.21px;
 }
 
 .services  {
   list-style: none;
   width: 300px;
-    padding-right: 15px;
-    position: relative;
-    top: -20px;
-
+  padding-right: 15px;
+  position: relative;
+  top: -13px;
 }
 
 .service  {
- /* background-color: #e5e5e5;*/
-    margin: 0;
-    padding: 0;
-    margin-bottom: 50px;
-    min-height: 280px;
-    outline: 3px solid red;
+  background-color: #e5e5e5;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 70px;
+  min-height: 288px;
 }
 
 .services-about {
   background-image: url(../img/delivery.svg);
   background-repeat: no-repeat;
+  background-position: 557px 12px;
   width: 760px;
+  position: relative;
+  top: -27px;
+    
+  min-height: 220px;
 }
 
 .services-button,
@@ -259,6 +288,8 @@ a {
   color: #000000;
   text-transform: uppercase;
 }
+
+
 .partners li {
   list-style: none;
 }
@@ -269,6 +300,10 @@ a {
   font-size: 47px;
   line-height: 48px;
   letter-spacing: 0.21px;
+  padding: 0;
+  margin: 0;
+  margin-top: 18px;
+  margin-bottom: 44px;
 }
 
 .about-us p,
@@ -277,8 +312,17 @@ a {
   line-height: 30px;
   font-weight: 300;
   color: #464646;
+  padding: 0;
+  margin: 0;
+  padding-bottom: 29px;
 }
 
+.about-us ul {
+  margin: 0;
+  padding: 0;
+  margin-top: 36px;
+  margin-left: 36px;
+}
 .about-us li {
   font-family: "gilroyextrabold", Arial, sans-serif;
   font-size: 16px;
@@ -325,7 +369,7 @@ a {
   line-height: 30px;
   color: #ffffff;
   font-weight: 300;
-  letter-spacing: 0.15  
+  letter-spacing: 0.15;  
   list-style: none;
 }
 
@@ -367,7 +411,6 @@ a {
 #search-field {
   font-weight: 300;
   color: #000000;
-        
 }
 
 .page-title {
@@ -375,9 +418,9 @@ a {
   font-size: 47px;
   line-height: 48px;
   letter-spacing: 0.17px;
-    
-    margin: 0;
-    padding: 0;
+  
+  margin: 0;
+  padding: 0;
 }
 
 .navigation-page {
@@ -400,10 +443,9 @@ a {
   padding: 0;
   margin: 0;
   padding-top: 25px;
-    margin-bottom: 69px;
-    
+  margin-bottom: 69px;
+  
   min-height: 70px;
-  outline: 3px solid red;
 }
 
 .criteria-button {
@@ -470,30 +512,27 @@ a {
   letter-spacing: 0.25px;
   
   opacity: 0.2;
-    
+  
   position: relative;
-    top: -550px;
-    left: 680px;
+  top: -550px;
+  left: 680px;
 }
 
 /* для сетки */
 
-.main-navigation {
-  outline: 1px solid black;
-}
 
 .catalog-link,
 .option-menu,
 .header-menu-small,
 .menu-sign-in {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .search input {
-    margin: 0;
-    padding: 0;
-    width: 240px;
+  margin: 0;
+  padding: 0;
+  width: 240px;
 }
 
 .menu-sign-in {
@@ -505,32 +544,28 @@ a {
   width: 220px;
 }
 
-
-
 .main-navigation-wrapper {
-    width: 1160px;
-    min-height: 299px;
-    outline: 3px solid green;
-    margin: 0 auto;
-    padding: 0;
-    margin-top: 40px;
+  width: 1160px;
+  min-height: 299px;
+  outline: 3px solid green;
+  margin: 0 auto;
+  padding: 0;
+  margin-top: 40px;
 }
 
 .container {
   width: 1160px;
   margin: 0 auto;
   padding: 0;
-  outline: 3px solid red;
 }
 
 .main-navigation-wrapper .container {
-  display: flex;
+ display: flex;
 }
 
 .header-catalog-menu-wrapper .container {
-    padding-top: 5px;
-    
-    display: flex;
+  padding-top: 5px;
+  display: flex;
 }
 
 .catalog-link a {
@@ -538,314 +573,424 @@ a {
 }
 
 .option-menu {
-    width: 500px;
+  width: 500px;
 }
 
 .wrapper {
-    width: 1160px;
-    min-height: 299px;
-    outline: 3px solid green;
-    margin: 0 auto;
-    padding: 0;
+  width: 1160px;
+  min-height: 299px;
+  margin: 0 auto;
+  padding: 0;
 }
 
-
 .product-item {
-    width: 384px;
-    height: 486px;
-    padding: 0;
-    margin: 0;
-    
+  width: 384px;
+  height: 486px;
+  padding: 0;
+  margin: 0;
 }
 
 .product-image {
-    width: 440px;
-    margin-left:30px;
-    top: -110px;
+  width: 440px;
+  margin-left:30px;
+  top: -110px;
 }
+
 .product-info {
-    width: 500px;
-    top: -30px;
+  width: 500px;
+  top: -32px;
 }
 
 .catalog-item {
-    display: flex;
-    min-height: 160px;
-    justify-content: space-between;
-    
-    padding: 0;
-    margin: 0;
+  display: flex;
+  min-height: 160px;
+  justify-content: space-between;
+  
+  padding: 0;
+  margin: 0;
 }
 
 .service .container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-
 .catalog{
-       outline: 3px solid blue;
-    min-height: 245px;
-    margin-bottom: 180px;
+  min-height: 245px;
+  margin-bottom: 177px;
 }
 
 .header-catalog-menu {
-    display: none;
+  display: none;
 }
 
 .header-main {
-    padding: 0 60px;
-    min-height: 300px;
-    margin-top: 40px;
-    /*background-color: #f7e296;*/
+  padding: 0 60px;
+  min-height: 300px;
+  margin-top: 40px;
+  background-color: #f7e296;
 }
 
 .header-container {
-    width: 500px;
-    display: flex;
-    justify-content: space-between;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .services {
-    margin: 0;
-    padding: 0;
-    padding-left: 15px;
+  margin: 0;
+  padding: 0;
+  padding-left: 14px;
 }
 
 .wrapp-menu {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+    
+  position: relative;
+  top: -5px;
 }
 
 .header-menu-small {
-    display: flex;
-    justify-content: space-between;
-    width: 220px;
-    
+  display: flex;
+  justify-content: space-between;
+  width: 220px;
 }
+
 .visually-hidden {
-    display: none;
+  display: none;
 }
 .main-logo {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: -23px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: -23px;
 }
+
 .option-menu-contacts {
-    margin-left: 70px;
+  margin-left: 70px;
 }
-
-
 
 .main-navigation {
-    margin-top: 35px;
+  margin-top: 40px;
 }
 
 .product {
-    display: flex; 
-    padding: 0 60px;
-    justify-content: space-between;
-    margin-bottom: 110px;
-    height: 375px;
+  display: flex; 
+  padding: 0 60px;
+  justify-content: space-between;
+  margin-bottom: 105px;
+  height: 375px;
 }
 
 .move-up {
-    position: relative;
+  position: relative;
 }
 
 .category {
-    width: 160px;
-    height: 160px;
-    background-color: #f7e296;
+  width: 160px;
+  height: 160px;
+  background-color: #f7e296;
 }
 
 .catalog-popular a {
-    position: relative;
-    padding: 0;
-    margin: 0;
-    top: 195px;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  top: 193px;
 }
 
 .partners {
-    display: flex;
-    margin-bottom: 120px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 120px;
 }
 
 .about-us {
-    width: 500px;
+  width: 500px;
 }
 
 .contacts {
-    width: 560px;
+  width: 560px;
 }
 
 .info {
-    display: flex;
-    justify-content: space-between;
-    min-height: 560px;
-    margin-bottom: 85px;
+  display: flex;
+  justify-content: space-between;
+  min-height: 560px;
+  margin-bottom: 60px;
 }
 
 .footer-up {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer-menu-small {
-    display: flex;
-    justify-content: space-between;
-    width: 380px;
+  display: flex;
+  justify-content: space-between;
+  width: 299px;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0;
+  padding-top: 4px;
 }
 
 .footer-up h2 {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .footer-main {
-    padding-top: 60px;
-    padding-bottom: 65px;
+  padding-top: 60px;
+  padding-bottom: 65px;
 }
 
 .footer-middle {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer-menu-main {
-    display: flex;
-    justify-content: space-between;
-    
-    width: 440px;
+  display: flex;
+  justify-content: space-between;
+  
+  width: 440px;
 }
+
 .footer-bottom {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
+
 .footer-social {
-    display: flex;
-    justify-content: space-between;
-    
-    width: 240px;
-    
-    list-style: none;
+  display: flex;
+  justify-content: space-between;
+  
+  width: 240px;
+  
+  list-style: none;
 }
 
 .footer-html {
-    width: 60px;
-    margin-left: 400px;
+  width: 60px;
+  margin-left: 400px;
 }
 
 .footer-main .container {
-    min-height: 200px;
+  min-height: 200px;
 }
 
 .warranty,
 .delivery {
-    padding-bottom: 35px;
+  padding-bottom: 39px;
 }
 .inner-header .header-main {
-    min-height: 186px;
-    margin-bottom: 40px;
+  min-height: 186px;
+  margin-bottom: 40px;
 }
 
 .page-name {
-    min-height: 100px;
-    margin-bottom: 37px;
-    
-    padding: 0 60px;
+  min-height: 100px;
+  margin-bottom: 37px;
+  
+  padding: 0 60px;
 }
 
 .navigation {
-    display: flex;
-    width: 400px;
-    justify-content: space-between;
-    
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding-top: 20px;
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
 }
 
 .devices .container {
-    display: flex;
-    justify-content: space-between;
-    
-    padding-left: 60px;
-    margin-bottom: 70px;
+  display: flex;
+  justify-content: space-between;
+  
+  padding-left: 60px;
 }
 
 .filter {
-    width: 268px;
+  width: 268px;
 }
 
 .list {
-    width: 760px;
+  width: 760px;
 }
 
 .sort {
-    display: flex;
-    justify-content: space-between;
-    min-height: 70px;
-    outline: 3px solid red;
+  display: flex;
+  justify-content: space-between;
+  min-height: 70px;
 }
 
 .criteria {
-    display: flex;
-    justify-content: space-between;
-    width: 300px;
-    padding: 0;
-    margin: 0;
-    padding-right: 10px;
-    padding-top: 25px;
-    
-    list-style: none;
-    
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+  padding: 0;
+  margin: 0;
+  padding-right: 10px;
+  padding-top: 25px;
+  
+  list-style: none;
 }
 
 .items {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .pages {
-    display: flex;
-    justify-content: space-between;
-    
-    margin: 0;
-    padding: 25px 30px;
-    margin-top: 35px;
-    
-    width: 760px;
-    
-
-    
-    min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 14px 25px;
+  width: 760px;
+  min-height: 70px;
 }
 
 .slider {
-    position: relative;
-    top: -1000px;
-    left: 1600px;
+  position: relative;
+  top: 550px;
+  left: 1373px;
 }
 
 .log-out {
-    padding: 0;
-    margin: 0;
-}
-.criteria-price {
-    margin: 0;
-    padding: 0;
-    min-height: 105px;
-    
-    margin-bottom: 36px;
+  padding: 0;
+  margin: 0;
 }
 
-.criteria-color {
+.criteria-price {
+  margin: 0;
+  padding: 0;
+  min-height: 105px;
+  
+  margin-bottom: 36px;
+}
+
+.colors {
   margin: 0;
   padding: 0;
   min-height: 250px;
   margin-bottom: 35px;
+  
+  display: flex;
+}
+
+.criteria-blue {
+  display: flex;
+}
+
+.only-items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.list-item {
+  margin-bottom: 70px;
+}
+
+.inner {
+  margin-top: 45px;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.items-descrip {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-3 {
+    display: flex;
+}
+
+.compare {
+  padding-left: 27px; 
+  position: relative;
+}
+
+.compare::before {
+  content: "";
+  left: 7px;
+  top: 12px;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+
+  background-image: url("../img/compare.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.cart {
+    position: relative;
+}
+
+.cart::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: 70px;
+  width: 12px;
+  height: 12px;
+  background-image: url("../img/cart.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0; 
+}
+
+.catalog-link {
+  position: absolute;
+}
+
+.catalog-link::after {
+  content: "";
+  position: absolute;
+  
+  top: 3px;
+  left: 230px;
+  width: 16px;
+  height: 16px;
+  background-image: url("../img/plus.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;   
+}
+
+.product-characters {
+  display: flex;
+  justify-content: space-between;
+  width: 430px;
+  margin-bottom: 7px;
+}
+
+.product-data {
+  display: flex;
+  justify-content: space-between;  
+  width: 365px;
+}
+
+.footer {
+    
 }
